--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,32 @@ a.active {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.news-card{
+  min-height: 260px !important;
+}
+.news-image-container{
+  display: flex !important;
+  justify-content: space-between !important;
+}
+.news-title{
+  width: 70%;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.news-image-container .img{
+  width:100px;
+  height:80px;
+}
+.news-card p{
+  color: darkslategray;
+  margin: 10px 0px !important;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.provider-container{
+  display: flex;
+  justify-content: space-between;
+}
+/* .provider-name{
+  margin-left: 10px;
+} */
