--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ a{
 }
 .item1{
   flex: 18%;
-  background-color: whitesmoke;
+  background-color: #fff;
   position: sticky;
   top: 0;
   height: 100vh;
@@ -44,7 +44,7 @@ a{
 }
 .content{
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+  background-color: #f8f8ff38;
 }
 .menus a{
   text-decoration: none;
@@ -101,13 +101,37 @@ a.active {
   /* border: 0; */
   border: none;
   /* border: 2px solid lightgray; */
-  height: 230px;
+  max-height: 220px;
   width: 200px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .maincard img{
   height: 110px;
+  width: 100%;
+}
+.outline-div{
+  box-shadow: 0 0 20px rgb(244 237 237);
+  border-radius: 8px;
+  padding: 10px 18px;
+  background-color: #fff;
+}
+.topcryptocard{
+  transition: all .3s;
+}
+.topcryptocard:hover{
+  transform: scale(1.05);
+
+}
+.positivechangep{
+  padding: 0px 8px;
+  border-radius: 4px;
+  background-color: #90ee905b;
+}
+.negativechangep{
+  padding: 0px 8px;
+  border-radius: 4px;
+  background-color: #ff63472c;
 }
 .news-card{
   min-height: 260px !important;
@@ -143,11 +167,12 @@ a.active {
 /* .provider-name{
   margin-left: 10px;
 } */
- .footer-section{
-  background-color: whitesmoke;
- }
-
- 
+.global-stats {
+  /* background-color: #fff; */
+  /* border-radius: 10px; */
+  /* padding: 10px; */
+  /* margin: 0px; */
+}
  .inputcontainer {
   display: flex;
   align-items: center;
@@ -194,7 +219,10 @@ a.active {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
+  /* align-items: center; */
+}
+.topnews-sec>div, .topnews-sec .card-header{
+  border-radius: 0px;
 }
 .topnews-sec ul li{
   font-size: 12px;
@@ -202,4 +230,28 @@ a.active {
 .topnews-sec ul li:hover{
   text-decoration: underline;
   cursor: pointer;
+}
+
+.footer {
+    background-color: #1e2736;
+    color: white;
+    padding: 2rem 0;
+}
+.footer h5{
+  font-size: medium;
+}
+.footer li{
+  font-weight: normal;
+  font-size: 14px;
+}
+.footer a {
+    color: #a0a8b7;
+    text-decoration: none;
+}
+.footer a:hover {
+    color: white;
+}
+.social-icons a i{
+    margin-right: 10px;
+    font-size: 25px;
 }
